add portrait images to unit buttons